# AdvElectronicsBadge

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  boards.txt  installed.json  package-lock.json  package.json  platform.txt
.github/workflows/: deploy.yml
docs/: index.md  uno.config.ts
docs/.vitepress/: config.js
docs/.vitepress/cache/deps_temp/: _metadata.json
docs/.vitepress/theme/: index.ts  style.css
docs/docs/: index.md
docs/docs/exercises/: index.md
docs/docs/exercises/1/: index.md  layout.json  step1.md  step2.md  step3.md
docs/docs/exercises/2/: index.md  prior1.md  step1.md  step2.md  step3.md  step4.md
docs/docs/exercises/3/: index.md
docs/docs/extras/: additional-steps.md  resources.md
docs/docs/getting-started/: help.md  index.md  induction.md  info.md  safety.md
docs/docs/getting-started/induction-overview/: focus-points.md  index.md  references.md
docs/docs/getting-started/makerspace/: index.md
docs/docs/more/equipment/: index.md
docs/docs/more/htmlbom/: index.md
docs/docs/more/references-and-links/: index.md
docs/docs/more/rp2040/: index.md
docs/docs/optional-steps/: index.md
docs/docs/optional-steps/custom-code/: index.md
docs/docs/optional-steps/firmware-test/: index.md
docs/public/static/: picogamepad_3_4_0_A.html
firmware/: CMakeLists.txt
firmware/src/: CMakeLists.txt  main.cpp
firmware/src/WS2812/: CMakeLists.txt  WS2812.cpp  WS2812.hpp  bld.sh  cmake_install.cmake  env  example.cpp
hardware/: PicoGamePad_V3_0_0_A.kicad_pcb  PicoGamePad_V3_0_0_A.kicad_prl  PicoGamePad_V3_0_0_A.kicad_pro
hardware/fab/board/: F3DEXPORT_StencilBase_Feet.dxf  F3DEXPORT_StencilBase_Premilled.dxf  Fusion_Default_Tools.tools  PicoGamePad_V3_0_0_A-BOTTOM_SOLDERPASTE.dxf  PicoGamePad_V3_0_0_A-BOTTOM_SOLDERPASTE.gbr  PicoGamePad_V3_0_0_A-Edge_Cuts.gbr  PicoGamePad_V3_0_0_A-job.gbrjob  StencilDowelMount_CNCMachined v3.f3d  StencilDowelMount_CNCMachined v7.f3d  StencilDowelMount_CNCMachined v7.iges  StencilDowelMount_CNCMachined v7.step  heins_tools.tools
hardware/fab/stencil/: stencil_panel-BOTTOM_SOLDERPASTE.gbr  stencil_panel-TOP_SOLDERPASTE.gbr  stencil_panel-job.gbrjob
scripts/: helpers.sh
tools/json/: picogamepad.json
variants/picogamepad/: pins_arduino.h
(+18 files in other folders)
